--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Post</title>
-    <link rel="icon" type="image/x-icon" href="/blog-website/bevin.png"> 
+    <link rel="icon" type="image/x-icon" href="bevin.png"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -97,7 +97,7 @@
         </button>
     </div>
     
-    <script src="js/cloudinary.js"></script>
+    <script src="js/mediadb.js"></script>
     <script src="js/editor.js"></script>
         <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
