--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Post</title>
-    <link rel="icon" type="image/x-icon" href="bevin.png"> 
+    <link rel="icon" type="image/x-icon" href="/blog-website/bevin.png"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -73,7 +73,6 @@
         
         <input type="file" id="file-input" style="display: none" accept="image/*,video/*">
         
-        <!-- Add this to your action-buttons div in create.html -->
         <div class="action-buttons">
             <button id="cancel-btn" class="btn secondary-btn">Cancel</button>
             <button id="save-draft-btn" class="btn outline-btn">
