--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="site-header">
-        <div class="container header-inner">
+        <div class="header-content">
             <button id="create-post-btn" class="btn primary-btn">
                 Create Post
             </button>
