--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
     <header class="site-header">
         <div class="header-content">
-            <button id="create-post-btn" class="btn primary-btn">
-                Create Post
-            </button>
+            <button id="create-post-btn" class="btn primary-btn">Create Post</button>
         </div>
     </header>
     
