--- a/create.html
+++ b/create.html
@@ -67,6 +67,11 @@
                     <span>Video</span>
                 </button>
             </div>
+
+            <!-- Auto-save status -->
+            <div class="toolbar-group save-status-container">
+                <span id="save-status" class="save-status">Saved</span>
+            </div>
         </div> 
         
         <div id="editor" contenteditable="true" class="content-editor"></div>
@@ -81,7 +86,6 @@
             <button id="publish-btn" class="btn primary-btn">
                 <i class="fa-solid fa-paper-plane"></i>Publish
             </button>
-            <span id="save-status" class="save-status">Saved</span>
         </div>
     </div>
 
