--- a/create.html
+++ b/create.html
@@ -28,8 +28,8 @@
 
             <!-- Font Size Buttons -->
             <div class="toolbar-group">
-                <button id="decrease-font-btn" class="toolbar-btn" title="Decrease Font Size"><i class="fa-solid fa-minus"></i></button>
-                <button id="increase-font-btn" class="toolbar-btn" title="Increase Font Size"><i class="fa-solid fa-plus"></i></button>
+                <button id="decrease-font-btn" class="toolbar-btn" title="Decrease Font Size"><i class="fa-solid fa-font"></i><i class="fa-solid fa-minus"></i></button>
+                <button id="increase-font-btn" class="toolbar-btn" title="Increase Font Size"><i class="fa-solid fa-font"></i><i class="fa-solid fa-plus"></i></button>
             </div>
 
             <!-- Alignment Buttons -->
@@ -47,10 +47,14 @@
 
             <!-- Autosave + Actions -->
             <div class="toolbar-group actions-container">
-                <span id="save-status" class="save-status">Saved</span>
                 <button id="cancel-btn" class="btn secondary-btn">Cancel</button>
-                <button id="save-draft-btn" class="btn outline-btn"><i class="fa-solid fa-floppy-disk"></i> Save Draft</button>
-                <button id="publish-btn" class="btn primary-btn"><i class="fa-solid fa-paper-plane"></i> Publish</button>
+                <button id="save-draft-btn" class="btn outline-btn">
+                    <i class="fa-solid fa-floppy-disk"></i> Save Draft
+                </button>
+                <button id="publish-btn" class="btn primary-btn">
+                    <i class="fa-solid fa-paper-plane"></i> Publish
+                </button>
+                <span id="save-status" class="save-status">Saved</span>
             </div>
         </div>
         
