--- a/create.html
+++ b/create.html
@@ -24,6 +24,7 @@
                 <button id="italic-btn" class="toolbar-btn" title="Italic"><i class="fa-solid fa-italic"></i></button>
                 <button id="underline-btn" class="toolbar-btn" title="Underline"><i class="fa-solid fa-underline"></i></button>
                 <button id="hr-btn" class="toolbar-btn" title="Horizontal Line"><i class="fa-solid fa-minus"></i></button>
+                <button id="link-btn" class="toolbar-btn" title="Insert Link"><i class="fa-solid fa-link"></i></button>
             </div>
 
             <!-- Font Size Buttons -->
