--- a/create.html
+++ b/create.html
@@ -24,6 +24,10 @@
                 <button id="italic-btn" class="toolbar-btn" title="Italic"><i class="fa-solid fa-italic"></i></button>
                 <button id="underline-btn" class="toolbar-btn" title="Underline"><i class="fa-solid fa-underline"></i></button>
                 <button id="hr-btn" class="toolbar-btn" title="Horizontal Line"><i class="fa-solid fa-minus"></i></button>
+            </div>
+
+            <!-- Link Buttons -->
+            <div class="toolbar-group">
                 <button id="link-btn" class="toolbar-btn" title="Insert Link"><i class="fa-solid fa-link"></i></button>
                 <button id="edit-link-btn" class="toolbar-btn" title="Edit Link"><i class="fa-solid fa-pen-to-square"></i></button>
                 <button id="unlink-btn" class="toolbar-btn" title="Remove Link"><i class="fa-solid fa-link-slash"></i></button>
