--- a/create.html
+++ b/create.html
@@ -12,6 +12,14 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        @media (max-width: 366px) {
+            body {
+                padding: 0;
+                line-height: 1.5;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="create-post-container">
