--- a/view.html
+++ b/view.html
@@ -38,6 +38,10 @@
         .post-content {
             text-align: left;  
         }
+
+        .post-content p {
+            font-size: 0.875;
+        }
         
         .post-content img,
         .post-content video {
@@ -48,14 +52,14 @@
             border: 1px solid gray;
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 366px) {
             .post-container {
-            padding: 20px 15px;
-        }
+                padding: 20px 15px;
+            }
 
             .post-title {
-            margin-bottom: 20px;
-            font-size: 1rem;
+                margin-bottom: 20px;
+                font-size: 1rem;
             }
         }
     </style>
