--- a/view.html
+++ b/view.html
@@ -61,6 +61,10 @@
                 margin-bottom: 20px;
                 font-size: 1rem;
             }
+
+            .post-content p {
+                font-size: 0.875;
+            }
         }
     </style>
 </head>
