--- a/view.html
+++ b/view.html
@@ -40,7 +40,7 @@
         }
 
         .post-content p {
-            font-size: 0.875;
+            font-size: 0.875rem;
         }
         
         .post-content img,
@@ -60,10 +60,6 @@
             .post-title {
                 margin-bottom: 20px;
                 font-size: 1rem;
-            }
-
-            .post-content p {
-                font-size: 0.875;
             }
         }
     </style>
