--- a/create.html
+++ b/create.html
@@ -24,7 +24,8 @@
 <body>
     <div class="create-post-container">
         <input type="text" id="post-title" placeholder="Title (optional)" class="post-title-input">
-        
+        <input type="text" id="post-description" placeholder="Description (optional)" class="post-description-input"/>
+
         <button id="toolbar-toggle" class="toolbar-toggle-btn">
             <i class="fa-solid fa-sliders"></i> Formatting
         </button>
