--- a/create.html
+++ b/create.html
@@ -60,6 +60,16 @@
                 <button id="align-right-btn" class="toolbar-btn" title="Align Right"><i class="fa-solid fa-align-right"></i></button>
             </div>
 
+            <!-- Undo / Redo Buttons -->
+            <div class="toolbar-group">
+                <button id="undo-btn" class="toolbar-btn" title="Undo">
+                    <i class="fa-solid fa-rotate-left"></i>
+                </button>
+                <button id="redo-btn" class="toolbar-btn" title="Redo">
+                    <i class="fa-solid fa-rotate-right"></i>
+                </button>
+            </div>
+
             <!-- Media Buttons -->
             <div class="toolbar-group">
                 <button id="upload-image-btn" class="toolbar-btn" title="Upload Image"><i class="fa-solid fa-image"></i> Image</button>
