--- a/create.html
+++ b/create.html
@@ -53,6 +53,32 @@
                 <button id="increase-font-btn" class="toolbar-btn" title="Increase Font Size"><i class="fa-solid fa-font"></i><i class="fa-solid fa-plus"></i></button>
             </div>
 
+            <!-- Font Size Controls -->
+            <div class="toolbar-group font-size-group">
+                <select id="font-size-select" class="toolbar-select" title="Font Size">
+                    <option value="">Size</option>
+                    <option value="12">12px</option>
+                    <option value="14">14px</option>
+                    <option value="16">16px</option>
+                    <option value="18">18px</option>
+                    <option value="20">20px</option>
+                    <option value="24">24px</option>
+                    <option value="28">28px</option>
+                    <option value="32">32px</option>
+                </select>
+
+                <input
+                    id="font-size-input"
+                    class="toolbar-input"
+                    type="number"
+                    min="10"
+                    max="72"
+                    step="1"
+                    placeholder="px"
+                    title="Custom Font Size"
+                />
+            </div>
+
             <!-- Alignment Buttons -->
             <div class="toolbar-group">
                 <button id="align-left-btn" class="toolbar-btn" title="Align Left"><i class="fa-solid fa-align-left"></i></button>
