--- a/create.html
+++ b/create.html
@@ -38,6 +38,7 @@
                 <button id="italic-btn" class="toolbar-btn" title="Italic"><i class="fa-solid fa-italic"></i></button>
                 <button id="underline-btn" class="toolbar-btn" title="Underline"><i class="fa-solid fa-underline"></i></button>
                 <button id="hr-btn" class="toolbar-btn" title="Horizontal Line"><i class="fa-solid fa-minus"></i></button>
+                <button id="small-hr-btn" class="toolbar-btn" title="Small Divider"><i class="fa-solid fa-grip-lines"></i></button>
             </div>
 
             <!-- Link Buttons -->
