--- a/create.html
+++ b/create.html
@@ -38,7 +38,7 @@
                 <button id="italic-btn" class="toolbar-btn" title="Italic"><i class="fa-solid fa-italic"></i></button>
                 <button id="underline-btn" class="toolbar-btn" title="Underline"><i class="fa-solid fa-underline"></i></button>
                 <button id="hr-btn" class="toolbar-btn" title="Horizontal Line"><i class="fa-solid fa-minus"></i></button>
-                <button id="small-hr-btn" class="toolbar-btn" title="Small Divider"><i class="fa-solid fa-grip-lines"></i></button>
+                <button id="small-hr-btn" class="toolbar-btn" title="Small Divider">-</i></button>
             </div>
 
             <!-- Link Buttons -->
@@ -102,12 +102,9 @@
             <!-- Autosave + Actions -->
             <div class="toolbar-group actions-container">
                 <button id="cancel-btn" class="btn secondary-btn">Cancel</button>
-                <button id="save-draft-btn" class="btn outline-btn">
-                    <i class="fa-solid fa-floppy-disk"></i> Save Draft
-                </button>
-                <button id="publish-btn" class="btn primary-btn">
-                    <i class="fa-solid fa-paper-plane"></i> Publish
-                </button>
+                <button id="save-draft-btn" class="btn outline-btn"><i class="fa-solid fa-floppy-disk"></i> Save Draft</button>
+                <button id="publish-btn" class="btn primary-btn"><i class="fa-solid fa-paper-plane"></i> Publish</button>
+                <span id="word-count" class="word-count">0 words</span>
                 <span id="save-status" class="save-status">Saved</span>
             </div>
         </div>
