--- a/create.html
+++ b/create.html
@@ -104,7 +104,7 @@
                 <button id="cancel-btn" class="btn secondary-btn">Cancel</button>
                 <button id="save-draft-btn" class="btn outline-btn"><i class="fa-solid fa-floppy-disk"></i> Save Draft</button>
                 <button id="publish-btn" class="btn primary-btn"><i class="fa-solid fa-paper-plane"></i> Publish</button>
-                <span id="word-count" class="word-count">0 words</span>
+                <span id="editor-stats" class="editor-stats">Words: 0 | Images: 0 | Videos: 0</span>
                 <span id="save-status" class="save-status">Saved</span>
             </div>
         </div>
