--- a/create.html
+++ b/create.html
@@ -107,8 +107,10 @@
             </div>
 
             <!-- Editor Status -->
-            <div class="toolbar-group status-container">
+            <div class="toolbar-group">
                 <span id="editor-stats" class="editor-stats">Words: 0 | Images: 0 | Videos: 0</span>
+            </div>
+            <div class="toolbar-group">
                 <span id="save-status" class="save-status">Saved</span>
             </div>
         </div>
