--- a/create.html
+++ b/create.html
@@ -107,7 +107,7 @@
             </div>
 
             <!-- Editor Status -->
-            <div class="toolbar-group stats">
+            <div class="toolbar-group stats-group">
                 <span id="editor-stats" class="editor-stats">Words: 0 | Images: 0 | Videos: 0</span>
                 <span id="save-status" class="save-status">Saved</span>
             </div>
