--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <header class="site-header">
         <div class="header-content">
-            <button id="create-post-btn" class="btn primary-btn"><i class="fa-solid fa-plus"></i> Create Post</button>
+            <a href="create.html" class="btn primary-btn" id="create-post-btn">
+                <i class="fa-solid fa-plus"></i> Create Post
+            </a>
         </div>
     </header>
     
