--- a/view.html
+++ b/view.html
@@ -50,6 +50,21 @@
             border: 1px solid gray;
         }
 
+        .post-content a {
+            color: #a277ff; 
+            text-decoration: underline;
+            transition: color 0.2s ease;
+        }
+
+        .post-content a:visited {
+            color: #8a5eff;
+        }
+
+        .post-content a:hover,
+        .post-content a:active {
+            color: #8a5eff;
+        }
+
         @media (max-width: 366px) {
             .post-container {
                 padding: 20px 15px;
