--- a/view.html
+++ b/view.html
@@ -51,18 +51,18 @@
         }
 
         .post-content a {
-            color: #a277ff; 
+            color: var(--primary-color);
             text-decoration: underline;
             transition: color 0.2s ease;
         }
 
         .post-content a:visited {
-            color: #8a5eff;
+            color: var(--primary-color);
         }
 
         .post-content a:hover,
         .post-content a:active {
-            color: #8a5eff;
+            color: var(--primary-color);
         }
 
         @media (max-width: 366px) {
