--- a/create.html
+++ b/create.html
@@ -37,6 +37,7 @@
                 <button id="bold-btn" class="toolbar-btn" title="Bold"><i class="fa-solid fa-bold"></i></button>
                 <button id="italic-btn" class="toolbar-btn" title="Italic"><i class="fa-solid fa-italic"></i></button>
                 <button id="underline-btn" class="toolbar-btn" title="Underline"><i class="fa-solid fa-underline"></i></button>
+                <button id="strike-btn" class="toolbar-btn" title="Strikethrough"><i class="fa-solid fa-strikethrough"></i></button>
                 <button id="hr-btn" class="toolbar-btn" title="Horizontal Line"><i class="fa-solid fa-minus"></i></button>
                 <button id="small-hr-btn" class="toolbar-btn" title="Small Divider">-</i></button>
             </div>
